nuevo popup para obra social

--- a/recupero/templates/recupero/factura_create_form.html
+++ b/recupero/templates/recupero/factura_create_form.html
@@ -19,8 +19,11 @@
                     <button type="button" class="btn btn-success">+</button>
                 </a>
             </div>
-            <div class="form-group col-md-12 ">
+            <div class="form-group col-md-12 " style="display: flex;">
                 {{ form.obra_social|as_crispy_field }}
+                <a href="{%  url 'ObraSocialPacienteCreate' paciente=None%}" id="add_obrasocial" class="button-add-popup" onclick="return showAddPopup(this);">
+                    <button type="button" class="btn btn-success">+</button>
+                </a>
             </div>
             <div class="form-group col-md-12 ">
                 {{ form.centro_de_salud|as_crispy_field }}
@@ -87,4 +90,12 @@
             win.close();
         }
     </script>
+    <script type="text/javascript">
+        document.querySelector('select[name="paciente"]').onchange=function() {
+          $("#add_obrasocial").attr("href", "{%  url 'ObraSocialPacienteCreate' paciente=None %}".replace('None',$('#id_paciente').val()))
+
+        };
+
+    </script>
+
 {% endblock js_footer %}
