--- a/recupero/templates/recupero/factura_create_form.html
+++ b/recupero/templates/recupero/factura_create_form.html
@@ -34,6 +34,7 @@
             <div class="form-group col-md-12 ">
                 {{ form.especialidad|as_crispy_field }}
             </div>
+
             <div class="form-group col-md-12 ">
                 {{ form.codigo_cie_principal|as_crispy_field }}
             </div>
@@ -73,9 +74,16 @@
                       addText: 'Agregar otro',
                       deleteText: 'Eliminar',
                       deleteCssClass: 'btn btn-sm btn-danger',
-                      addCssClass: 'btn btn-sm btn-success'
+                      addCssClass: 'btn btn-sm btn-success',
+                      added: function($row) {
+                            $('#id_prestacionesFactura-'+$row.index()+'-tipo').select2();
+                      }
                   });
            {% endwith %}
+            var max_prestacion_factura = $('#id_prestacionesFactura-TOTAL_FORMS').val();
+            for (var x=0; x<max_prestacion_factura; x++) {
+                $('#id_prestacionesFactura-'+x+'-tipo').select2();
+            }
         })
     </script>
     <script type="text/javascript">
