--- a/recupero/templates/recupero/factura_create_form.html
+++ b/recupero/templates/recupero/factura_create_form.html
@@ -13,6 +13,9 @@
     <div class="col-12 col-md-12 " style="display: flex;" >
         <div class="col-6 col-md-6">
         {% csrf_token %}
+            <div class="form-group col-md-12 ">
+                {{ form.fecha_atencion|as_crispy_field }}
+            </div>
             <div class="form-group col-md-12 col-lg-12 " style="display: flex;">
                 {{ form.paciente|as_crispy_field }}
                 <a href="{%  url 'PacienteCreate' %}" id="add_paciente" class="button-add-popup" onclick="return showAddPopup(this);">
