--- a/recupero/templates/recupero/factura_create_form.html
+++ b/recupero/templates/recupero/factura_create_form.html
@@ -13,36 +13,45 @@
     <div class="col-12 col-md-12 " style="display: flex;" >
         <div class="col-6 col-md-6">
         {% csrf_token %}
-            <div class="form-group col-md-12 ">
-                {{ form.fecha_atencion|as_crispy_field }}
+            <div class="form-row">
+                <div class="col-md-6  col-lg-6">
+                    {{ form.fecha_atencion|as_crispy_field }}
+                </div>
             </div>
-            <div class="form-group col-md-12 col-lg-12 " style="display: flex;">
-                {{ form.paciente|as_crispy_field }}
-                <a href="{%  url 'PacienteCreate' %}" id="add_paciente" class="button-add-popup" onclick="return showAddPopup(this);">
-                    <button type="button" class="btn btn-success">+</button>
-                </a>
+            <div class="form-row">
+                <div class="col-md-6 col-lg-6" style="display: flex;">
+                    {{ form.paciente|as_crispy_field }}
+                    <a href="{%  url 'PacienteCreate' %}" id="add_paciente" class="button-add-popup" onclick="return showAddPopup(this);">
+                        <button type="button" class="btn btn-success">+</button>
+                    </a>
+                </div>
+                <div class=" col-md-6  col-lg-6 " style="display: flex;">
+                    {{ form.obra_social|as_crispy_field }}
+                    <a href="{%  url 'ObraSocialPacienteCreate' paciente=None%}" id="add_obrasocial" class="button-add-popup" onclick="return showAddPopup(this);">
+                        <button type="button" class="btn btn-success">+</button>
+                    </a>
+                </div>
             </div>
-            <div class="form-group col-md-12 " style="display: flex;">
-                {{ form.obra_social|as_crispy_field }}
-                <a href="{%  url 'ObraSocialPacienteCreate' paciente=None%}" id="add_obrasocial" class="button-add-popup" onclick="return showAddPopup(this);">
-                    <button type="button" class="btn btn-success">+</button>
-                </a>
+            <div class="form-row">
+                <div class=" col-md-6 ">
+                    {{ form.centro_de_salud|as_crispy_field }}
+                </div>
+                <div class=" col-md-6 ">
+                    {{ form.especialidad|as_crispy_field }}
+                </div>
             </div>
-            <div class="form-group col-md-12 ">
-                {{ form.centro_de_salud|as_crispy_field }}
+            <div class="form-row">
+                <div class=" col-md-4 ">
+                    {{ form.profesional|as_crispy_field }}
+                </div>
             </div>
-            <div class="form-group col-md-12 ">
-                {{ form.especialidad|as_crispy_field }}
-            </div>
-            <div class="form-group col-md-12 ">
-                {{ form.profesional|as_crispy_field }}
-            </div>
-
-            <div class="form-group col-md-12 ">
-                {{ form.codigo_cie_principal|as_crispy_field }}
-            </div>
-            <div class="form-group col-md-12 ">
-                {{ form.codigos_cie_secundarios|as_crispy_field }}
+            <div class="form-row">
+                <div class=" col-md-6 ">
+                    {{ form.codigo_cie_principal|as_crispy_field }}
+                </div>
+                <div class=" col-md-6 ">
+                    {{ form.codigos_cie_secundarios|as_crispy_field }}
+                </div>
             </div>
         </div>
         <div class="col-6 col-md-6" style=" width: 50%;
@@ -54,7 +63,20 @@
            <div class="card-body">
                 {% for form in prestaciones %}
                     <div class="{{ p }}-form">
-                        {{ form|crispy }}
+                        <div class="form-row">
+                            <div class=" col-md-8 ">
+                                {{ form.tipo|as_crispy_field }}
+                            </div>
+                            <div class=" col-md-4 ">
+                                {{ form.cantidad|as_crispy_field }}
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group col-md-12 ">
+                                {{ form.observaciones|as_crispy_field }}
+                            </div>
+                        </div>
                     </div>
                 {% endfor %}
                 {{ prestaciones.management_form }}
