Se quitó la hora del campo fecha_atencion de la factura

--- a/ggg/templates/base_admin.html
+++ b/ggg/templates/base_admin.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Municipalidad de Córdoba">
   <meta name="description" content="{{ site_description }}">
-  <meta name="app_version" content="{{ app_version }}"
+  <meta name="app_version" content="{{ app_version }}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>{% block title %}{{ site_title }}{% endblock %}</title>
