ajustes de nombre de funcion, y test de la funcion general

--- a/recupero/templates/recupero/factura_create_form.html
+++ b/recupero/templates/recupero/factura_create_form.html
@@ -185,7 +185,7 @@
         }
          $('#add_paciente').click(function () {
             if ($("#id_dni").val().length>=7){
-                var url = '{% url 'BuscarPaciente' dni=None %}'.replace('None',  $("#id_dni").val() );
+                var url = '{% url 'BuscarPacienteRecupero' dni=None %}'.replace('None',  $("#id_dni").val() );
                 $.ajax({
                     type: "GET",
                     url: url,
