--- a/recupero/templates/recupero/factura_create_form.html
+++ b/recupero/templates/recupero/factura_create_form.html
@@ -19,10 +19,7 @@
                 <div class="col-md-6  col-lg-6">
                     {{ form.fecha_atencion|as_crispy_field }}
                 </div>
-            </div>
-            <div class="form-row">
-
-                <div class="col-md-6 col-lg-6" >
+                 <div class="col-md-6 col-lg-6" >
                     <div style="display: flex;margin-bottom:0;">
                         <div>
                             <label class="col-form-label ">
@@ -37,17 +34,23 @@
                                 <i id="loading" style="display: none" class="fa fa-spinner fa-spin"></i>
                                 <i id="found" style="display: none" class="fa fa-check"></i>
                             </button>
-
                          </a>
                     </div>
                     <span class="help_text_style" style="margin-top: 0;clear: both;font-weight: bold" id="nombre_paciente"></span>
 
                 </div>
+            </div>
+            <div class="form-row">
+
+
                 <div class=" col-md-6  col-lg-6 " style="display: flex;">
                     {{ form.obra_social|as_crispy_field }}
                     <a href="{%  url 'ObraSocialPacienteCreate' paciente=None%}" id="add_obrasocial" class="button-add-popup" onclick="return showAddPopup(this);">
                         <button type="button" class="btn btn-success">+</button>
                     </a>
+                </div>
+                <div class="col-md-6  col-lg-6">
+                    {{ form.numero_afiliado|as_crispy_field }}
                 </div>
             </div>
             <div class="form-row">
@@ -135,8 +138,7 @@
                 url: url,
                 dataType: 'json',
                 success: function (data) {
-                    $("#id_dni").val(data.dni);
-                    $("#id_dni").prop("disabled", true);
+                    $("#id_dni").val(data.dni).prop("disabled", true);
                     $("#nombre_paciente").text(data.nombre);
                     $("#search").hide();
                     $("#found").show();
@@ -169,10 +171,9 @@
         }
         function closePopupCleanField(win, pk, doc){
             $("#id_paciente").val(pk);
-            $("#id_dni").val(doc);
+            $("#id_dni").val(doc).prop("disabled", true);
             $("#loading").hide();
             $("#found").show();
-            $("#id_dni").prop("disabled", true);
             win.close();
             $("#add_obrasocial").attr("href", "{%  url 'ObraSocialPacienteCreate' paciente=None %}".replace('None',pk));
             $("#id_obra_social").empty();
@@ -197,8 +198,7 @@
                     success: function (data) {
                         if (data.encontrado){
                             $("#id_paciente").val(data.paciente_id);
-                            $("#id_dni").val(data.dni);
-                            $("#id_dni").prop("disabled", true);
+                            $("#id_dni").val(data.dni).prop("disabled", true);
                             $("#add_obrasocial").attr("href", "{%  url 'ObraSocialPacienteCreate' paciente=None %}".replace('None',data.paciente_id));
                             $("#add_paciente").prop("disabled", true);
                             $("#nombre_paciente").text(data.nombre);
@@ -216,6 +216,30 @@
                 });
             }
         });
+        document.querySelector('select[name="obra_social"]').onchange=function() {
+            var url = '{% url 'BuscarObraSocialPaciente' id_paciente='vacio_id_paciente' id_obra_social='vacio_id_obra_social' %}'
+                .replace('vacio_id_paciente',$("#id_paciente").val())
+                .replace('vacio_id_obra_social',$("#id_obra_social").val());
+                $.ajax({
+                    type: "GET",
+                    url: url,
+                    dataType: 'json',
+                    success: function (data) {
+                        if (data.encontrado){
+                            if (data.numero_afiliado){
+                                $("#id_numero_afiliado").val(data.numero_afiliado).prop("disabled", true);
+
+                            }
+                            else{
+                                $("#id_numero_afiliado").val("").prop("disabled", false).attr('placeholder', 'Ingrese numero de carnet de paciente');
+                            }
+                        }
+                    },
+                    complete: function () {
+
+                    },
+                });
+        };
     </script>
 {% endblock js_footer %}
 
