--- a/pacientes/templates/pacientes/evolucion.html
+++ b/pacientes/templates/pacientes/evolucion.html
@@ -13,10 +13,12 @@
       <div class="row">
           <div class="col-12 col-md-12">
             <p>
-              Paciente: <b>{{ instance.paciente }}</b>. 
-              Profesional: <b>{{ instance.profesional }}</b>. 
-              Especialidad: <b>{{ instance.especialidad }}</b>. 
-              Centro: <b>{{ instance.centro_de_salud }}</b>. 
+              Paciente: <b>{{ instance.paciente }}</b> |
+              Profesional: <b>{{ instance.profesional }}</b> |
+              Obra Social: <b>{{ instance.obra_social }}</b>
+              <br>
+              Especialidad: <b>{{ instance.especialidad }}</b> |
+              Centro: <b>{{ instance.centro_de_salud }}</b>
             </p>
           </div>
       </div>
